# crypto_speed_test

./: CMakeLists.txt  MarketDataMessage.cpp  MarketDataMessage.h  Speed Test.docx  Utility.cpp  Utility.h  Vagrantfile  WebsocketFeed.cpp  WebsocketFeed.h  condition_var.h  main.cpp  speedtest
fixengine/: CMakeLists.txt  buffer.c  clock_gettime.c  fix_client.c  fix_client.h  fix_common.c  fix_common.h  fix_message.c  fix_message.h  fix_perf.c  fix_session.c  fix_session.h  fix_template.c  itoa.c  itoa.h  read-write.c  test.c  test.h  trace.h
fixengine/auth/: CMakeLists.txt  gdax_auth.cpp  gdax_auth.h
